src/web-ui/src/app/app.component.scss
.page-content {
  padding: 10px;
}

.router-wrapper {
  display: flex;
  flex-direction: row;
  height: 100%;
  margin-left: 280px;
}

.router-section {
  margin-top: 50px;
  display: block;
  min-height: 300px;
  width: calc(100vw - 280px);
}

.content {
  padding: 25px 50px 50px 50px;
}

.side-menu-wrapper {
  position: fixed;
  border-right: #373e45 solid 1px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 280px;
  height: 100%;
  margin-top: 50px;
  background-color: var(--aswg-bg-primary-bg-color);
}

.footer {
  border-top: var(--aswg-border-color) solid 1px;
  padding: 15px 10px 15px 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.desktop-header {
  position: fixed;
  height: 50px;
  z-index: 100;
  width: 100%;
}

@media (max-width: 800px) {
  footer {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .router-wrapper {
    display: flex;
    flex-direction: row;
    height: 100%;
    margin-left: 0;
  }

  .router-section {
    margin-left: 0;
    margin-top: 40px;
    width: 100%;
    padding: 0;
  }

  .row {
    width: 100%;
    position: fixed;
    z-index: 100;
  }

  .desktop-header {
    position: fixed;
    height: 50px;
    z-index: 100;
    width: 100%;
  }
}

